# Mattrax

./: .env.example  .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO  biome.fix.json  biome.json  drizzle.config.ts  go.mod  go.sum  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  policy.ts  sqlc.yaml  sst-env.d.ts  sst.config copy.ts  sst.config.ts  tailwind.config.cjs  tsconfig.base.json  tsconfig.json  vite.config.ts  wrangler.toml
.cargo/: config.toml
.github/: cl.sh  deploy.sh  deploy2.sh
.husky/: pre-commit
api/: drizzle.config.ts  package.json  tsconfig.json
apps/cloud/: Cargo.toml  README.md  live.js  sst-env.d.ts  sst.config.ts
apps/cloud/src/: api.rs  enrollment.rs  lib.rs  main.rs  mdm.rs  sql.rs
apps/cloud/static/: openapi.yaml  scalar.html
apps/configure/src-tauri/: Cargo.toml  tauri.conf.json
apps/configure/src-tauri/icons/: icon.icns
apps/configure/src-tauri/src/: main.rs
apps/ingest/: Cargo.toml  out.json  package.json  tsconfig.json
apps/ingest/ddf/: ADMX_ActiveXInstallService_AreaDDF.xml  ADMX_AddRemovePrograms_AreaDDF.xml  ADMX_AdmPwd_AreaDDF.xml  ADMX_AppCompat_AreaDDF.xml  ADMX_AppXRuntime_AreaDDF.xml  ADMX_AppxPackageManager_AreaDDF.xml  ADMX_AttachmentManager_AreaDDF.xml  ADMX_AuditSettings_AreaDDF.xml  ADMX_Bits_AreaDDF.xml  ADMX_COM_AreaDDF.xml  ADMX_CipherSuiteOrder_AreaDDF.xml  ADMX_ControlPanelDisplay_AreaDDF.xml  ADMX_ControlPanel_AreaDDF.xml  ADMX_Cpls_AreaDDF.xml  ADMX_CredSsp_AreaDDF.xml  ADMX_CredUI_AreaDDF.xml  ADMX_CredentialProviders_AreaDDF.xml  ADMX_CtrlAltDel_AreaDDF.xml  ADMX_DCOM_AreaDDF.xml  ADMX_DFS_AreaDDF.xml  ADMX_DWM_AreaDDF.xml  ADMX_DataCollection_AreaDDF.xml  ADMX_Desktop_AreaDDF.xml  ADMX_DeviceCompat_AreaDDF.xml  ADMX_DeviceGuard_AreaDDF.xml  ADMX_DeviceInstallation_AreaDDF.xml  ADMX_DeviceSetup_AreaDDF.xml  ADMX_DigitalLocker_AreaDDF.xml  ADMX_DiskDiagnostic_AreaDDF.xml  ADMX_DiskNVCache_AreaDDF.xml  ADMX_DiskQuota_AreaDDF.xml  ADMX_DistributedLinkTracking_AreaDDF.xml  ADMX_DnsClient_AreaDDF.xml  ADMX_EAIME_AreaDDF.xml  ADMX_EncryptFilesonMove_AreaDDF.xml  ADMX_EnhancedStorage_AreaDDF.xml  ADMX_ErrorReporting_AreaDDF.xml  ADMX_EventForwarding_AreaDDF.xml  ADMX_EventLog_AreaDDF.xml  ADMX_EventLogging_AreaDDF.xml  (+296 more)
apps/ingest/manifests/: LICENCE
apps/ingest/src/: apple_manifests.rs  index.ts  main.rs  windows_ddf.rs
apps/mattrax/: Cargo.toml  build.rs
apps/mattrax/src/: config.rs  db.rs  main.rs
apps/mattrax/src/api/: mdm.rs  mod.rs  realtime.rs
apps/mattrax/src/api/internal/: mod.rs  sql.rs
apps/mattrax/src/api/mdm/: enrollment.rs  hash_map_diff.rs  manage.rs  mod.rs
apps/mattrax/src/cli/: cloud.rs  init.rs  mod.rs  serve.rs
apps/mattrax/src/cli/serve/: acme.rs  helpers.rs  mod.rs  server.rs  updater.rs  web.rs
apps/mattrax/src/config/: config.rs  local.rs  manager.rs  mod.rs  node.rs
apps/mattraxd/: Cargo.toml  build.rs
apps/mattraxd/src/: main.rs
apps/mattraxd/src/cli/: mod.rs
apps/mttx/: Cargo.toml
apps/mttx/src/: load.rs  main.rs
apps/mttx/src/cli/: deploy.rs  export.rs  import.rs  login.rs  mod.rs  open.rs  pull.rs  push.rs  render.rs  validate.rs
apps/platform/: Cargo.toml  LICENCE  README.md  deploy.sh  live.js  policy.json  sst-env.d.ts  sst.config.ts
apps/platform/src/: manage.rs
aws/: bootstrap.sh  cloudformation.yaml  dominion.service  mattrax.service  setup.sh  start.sh
crates/apple-pfm/: Cargo.toml
crates/apple-pfm/src/: lib.rs
crates/better-acme/: Cargo.toml
crates/better-acme/src/: acme.rs  fs_store.rs  lib.rs  server.rs  store.rs
crates/db/: Cargo.toml
crates/db/src/: _migrations.rs  db.rs  lib.rs
crates/mattrax/: Cargo.toml
crates/mattrax/src/: main.rs
crates/mattrax/src/api/: mod.rs
crates/mattrax/src/api/mdm/: mod.rs
crates/mattrax/src/cli/: init.rs  mod.rs  serve.rs
crates/mx-core/: Cargo.toml
crates/mx-core/src/: api.rs  lib.rs  util.rs
crates/mx-core/src/api/: auth.rs  tenant.rs  user.rs
crates/mx-db/: Cargo.toml
crates/mx-db/migrations/: 0003_spotty_changeling.sql  0004_peaceful_magik.sql  0006_young_rick_jones.sql  0007_right_slayback.sql  0008_living_grandmaster.sql  0009_exotic_venus.sql  0010_curvy_tigra.sql  0010_normal_phil_sheldon.sql  0011_nosy_the_liberteens.sql
crates/mx-db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0005_snapshot.json  0006_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  _journal.json
crates/mx-db/migrations/refinery/: V0000__dry_stephen_strange.sql  V0002__outgoing_dagger.sql  V0004__peaceful_magik.sql  V0005__mysterious_santa_claus.sql  V0006__young_rick_jones.sql  V0007__right_slayback.sql  V0009__exotic_venus.sql  V0010__curvy_tigra.sql  V0010__normal_phil_sheldon.sql  V0011__nosy_the_liberteens.sql
crates/mx-db/src/: _migrations.rs  db.rs  lib.rs
crates/mx-manage/: Cargo.toml
crates/mx-manage/src/: enrollment.rs  lib.rs  manage.rs
crates/mx-policy/: Cargo.toml
crates/mx-policy/src/: dmvalue.rs  lib.rs  platform.rs  policy.rs  script.rs
crates/mx-policy/tests/: export.rs
crates/mx-windows/: Cargo.toml
crates/mx-windows/src/: actions.rs  authenticate.rs  lib.rs  policies.rs  results.rs
crates/policy/: Cargo.toml
crates/policy/src/: android.rs  apple.rs  configuration.rs  lib.rs  platform.rs  policy.rs  script.rs  windows.rs
crates/policy/tests/: export.rs
crates/profile-manifests/: Cargo.toml
crates/profile-manifests/src/: lib.rs  manifest.rs  parse_from_dir.rs  validate.rs
crates/profile-manifests/tests/: test.rs
crates/profile-manifests/tests/data/: com.github.profilecreator.exampleApplication.plist
crates/specta-jsonschema/: Cargo.toml
crates/specta-jsonschema/src/: lib.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs  policies.rs  results.rs
crates/windows/tests/: graph.rs
docs/: ENROLLMENT.md  FAQ.md  GETTING_STARTED.md  INVESTORS.md  MIGRATE.md  MVS.md  SELF_HOSTING.md  THINKING.md
dominion/: README.md  go.mod  go.sum  openssl.cnf
forge/: app.config.ts  index.html  (+5 more)
(+1412 files in other folders)
