[workspace]
resolver = "2"
members = [
  "apps/ingest",
  "apps/mattrax",
  "apps/mattraxd",
  "apps/mttx",
  "apps/cloud",
  "crates/*",
]

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
tracing = { version = "^0.1" }
tokio = { version = "^1", features = [
  "macros",
  "rt-multi-thread",
] }
axum = { version = "^0.7" }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
specta = { version = "=2.0.0-rc.11", features = [
  "typescript",
  "serde_json",
  "chrono",
  "rust_decimal",
] }

[patch.crates-io]
# TODO: This is likely a security risk, will fix it properly once the MVP is out.
# TODO: This patch is from the unreleased `0.13.0` but I patched it to lie and pretend to be `0.21.1`
rcgen = { git = "https://github.com/oscartbeaumont/rcgen", rev = "a3cd77f13f51b441b5d172aeac2f528c4a79c3bc" }
# TODO: Waiting for https://github.com/FlorianUekermann/rustls-acme/pull/49 or my own PR cause that one is stale.
# rustls-acme = { git = "https://github.com/oscartbeaumont/rustls-acme", rev = "051ebd0433ad66855b728f7b848369a58ee4ebbf" }

# Some minor improvements
easy-xml = { git = "https://github.com/oscartbeaumont/easy-xml", rev = "f373c5bc85802e434274400865a9ba8dbc2313f1" }
easy-xml-derive = { git = "https://github.com/oscartbeaumont/easy-xml", rev = "f373c5bc85802e434274400865a9ba8dbc2313f1" }

# Support for latest mysql-async - https://github.com/rust-db/refinery/pull/327
refinery-core = { git = "https://github.com/rust-db/refinery", rev = "ff1c5c07c00f196e8ec4f10827ab882db2fd9d14" }

# TODO: This should only be used when using SST Live Lambda!
lambda_runtime = { git = "https://github.com/oscartbeaumont/aws-lambda-rust-runtime", rev = "9d75ac7168dd6869bfa8deb1bc83018830dc617f" }
