[workspace]
resolver = "2"
members = [
  "apps/ingest",
  "apps/mattraxd", 
  "apps/cloud",
  "crates/*",
]

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
tracing = { version = "^0.1" }
tokio = { version = "^1", features = [
  "macros",
  "rt-multi-thread",
] }
axum = { version = "^0.7" }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
specta = { version = "=2.0.0-rc.20", features = [
  "derive",
  "serde_json",
  "chrono",
  "rust_decimal",
] }
specta-util = { version = "0.0.7" }
specta-typescript = "0.0.7"
mysql_async = { version = "0.34.2", default-features = false, features = [
    "default-rustls",
    "derive",
    "tracing",
    "chrono",
] }

[patch.crates-io]
# Some minor improvements
easy-xml = { git = "https://github.com/oscartbeaumont/easy-xml", rev = "f373c5bc85802e434274400865a9ba8dbc2313f1" }
easy-xml-derive = { git = "https://github.com/oscartbeaumont/easy-xml", rev = "f373c5bc85802e434274400865a9ba8dbc2313f1" }

# Support for latest mysql-async - https://github.com/rust-db/refinery/pull/327
refinery-core = { git = "https://github.com/rust-db/refinery", rev = "ff1c5c07c00f196e8ec4f10827ab882db2fd9d14" }

# TODO: This should only be used when using SST Live Lambda!
# lambda_runtime = { git = "https://github.com/oscartbeaumont/aws-lambda-rust-runtime", rev = "9d75ac7168dd6869bfa8deb1bc83018830dc617f" }
