[package]
name = "mx-cloud"
description = "Services for Mattrax's Cloud offering"
version = "0.0.1"
edition = "2021"
publish = false
default-run = "axum"

[dependencies]
mx-db = { path = "../../crates/mx-db" }

tracing = { workspace = true }
axum = { workspace = true, features = ["http2", "macros", "ws"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
mysql_async = { workspace = true }

openssl = { version = "0.10.66", features = ["vendored"] }

lambda_http = "0.13.0"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["trace"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
cuid2 = "0.1.3"
