[package]
name = "ingest"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
easy-xml = "0.1.4"
ms-ddf = { path = "../../crates/ms-ddf" }
apple-pfm = { path = "../../crates/apple-pfm" }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
specta = { workspace = true, features = ["typescript"] }
glob = "0.3.1"
