[package]
name = "ingest"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
easy-xml = "0.1.4"
ms-ddf = { path = "../../crates/ms-ddf" }
apple-pfm = { path = "../../crates/apple-pfm" }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
glob = "0.3.1"
plist = "1.6.1"
