[package]
name = "mattrax"
description = "Mattrax MDM"
version = "0.0.1"
edition = "2021"
publish = false
default-run = "mattrax"

[package.metadata.dist]
dist = true

[dependencies]
mx-utils = { path = "../../crates/utils" }
better-acme = { path = "../../crates/better-acme" }
ms-mde = { path = "../../crates/ms-mde" }
mx-windows = { path = "../../crates/windows" }
mx-db = { path = "../../crates/db" }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.3", features = ["derive"] }
axum = { version = "0.7.4", features = ["http2", "macros", "ws"] }
rustls = "=0.22.2" # TODO: Upgrade
futures-rustls = "0.25.1"
tower = "0.4.13"
hyper = { version = "1.2.0", features = ["http1", "http2", "server"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
hyper-util = { version = "0.1.3", features = [
    "http1",
    "http2",
    "server-auto",
    "tokio",
] }
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio-stream = "0.1.15"
getrandom = "0.2.12"
rcgen = { version = "=0.13.0", features = ["x509-parser"] }
base64 = "0.22.0"
sha1 = "0.10.6"
hex = "0.4.3"
futures = { version = "0.3.30", default-features = false }
cuid2 = "0.1.2"
time = "0.3.34"
urlencoding = "2.1.3"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
x509-parser = "0.16.0"
