[package]
name = "mattrax"
description = "Mattrax MDM"
version = "0.0.1"
edition = "2021"
publish = false
default-run = "mattrax"

[package.metadata.dist]
dist = true

[features]
default = []
serve-web = []

[dependencies]
mx-utils = { path = "../../crates/mx-utils" }
# ms-mde = { path = "../../crates/ms-mde" }
mx-windows = { path = "../../crates/mx-windows" }
mx-db = { path = "../../crates/mx-db" }
mx-manage = { path = "../../crates/mx-manage" }

openssl = { version = "0.10.66", features = ["vendored"] }

tracing = { workspace = true }
tokio = { workspace = true, features = [
  "process",
  "signal"
] }
axum = { workspace = true, features = ["http2", "macros", "ws"] }
serde = { workspace = true }
serde_json = { workspace = true }

tracing-subscriber = "0.3.18"
clap = { version = "4.5.16", features = ["derive"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
rustls = { version = "0.23.12", features = ["ring"] }
hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
rcgen = { version = "0.13.1", features = ["x509-parser"] }
base64 = "0.22.1"
hex = "0.4.3"
cuid2 = "0.1.3"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
x509-parser = "0.16.0"
mysql_async = { version = "0.34.2", default-features = false }
arc-swap = "1.7.1"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["stream"] }
chrono = { version = "0.4.38", features = ["serde"] }
