[package]
name = "mattraxd"
description = "Mattrax agent"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
mattrax-utils = { path = "../../crates/utils" }

clap = { version = "4.5.3", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
