[package]
name = "mattraxd"
description = "Mattrax agent"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
mx-utils = { path = "../../crates/mx-utils" }

clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
