[package]
name = "mattraxd"
description = "Mattrax agent"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
mx-utils = { path = "../../crates/mx-utils" }

tracing = { workspace = true }

clap = { version = "4.5.13", features = ["derive"] }
tracing-subscriber = "0.3.18"
