[package]
name = "mttx"
description = "Mattrax CLI"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
mx-utils = { path = "../../crates/mx-utils" }
ms-mdm = { path = "../../crates/ms-mdm" }

clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
graph-rs-sdk = "2.0.0-beta.0"
reqwest = { version = "0.12.4", features = ["json"] }
urlencoding = "2.1.3"
open = "5.1.3"
easy-xml = "0.1.4"
