[package]
name = "mttx"
description = "Mattrax CLI"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
mx-utils = { path = "../../crates/mx-utils" }
ms-mdm = { path = "../../crates/ms-mdm" }

tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.5.16", features = ["derive"] }
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.34"
graph-rs-sdk = "2.0.1"
reqwest = { version = "0.12.7", features = ["json"] }
urlencoding = "2.1.3"
open = "5.3.0"
easy-xml = "0.1.4"
