[package]
name = "apple-pfm"
description = "Parser for Apple's Preference Manifest Files"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
plist = "1.7.0"
serde = { workspace = true }
thiserror = "1.0.63"

[dev-dependencies]
pretty_assertions = "1.4.1"
