[package]
name = "better-acme"
version = "0.0.1"
edition = "2021"
publish = false

# TODO: Remove tokio and dependency inject runtime & http client???
# TODO: Tracing feature

[dependencies]
async-trait = "0.1.80"
base64 = "0.22.1"
chrono = "0.4.38"
futures = "0.3.30"
pem = "3.0.4"
rustls = { version = "0.23.6", features = ["ring"] }
rustls-acme = { version = "0.10.1", features = ["tokio"] }
sha2 = "0.10.8"
tokio = { version = "1", features = ["rt", "fs"] }
x509-parser = "0.16.0"
