[package]
name = "mx-core"
description = "The Mattrax core"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/mattrax/Mattrax"
publish = false

[dependencies]
mx-db = { path = "../mx-db" }

rspc = { workspace = true }
rspc-openapi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true }
specta-util.workspace = true
tracing.workspace = true
serde_json.workspace = true

chrono = "0.4.38"
thiserror = "1.0.63"
