[package]
name = "mx-manage"
description = "The core management server for Mattrax"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/mattrax/Mattrax"
publish = false

[dependencies]
ms-mde = { path = "../../crates/ms-mde" }

tracing = { workspace = true }
axum = { workspace = true, no-default-features = true } # TODO: Maybe removing this???
serde = { workspace = true }

rcgen = { version = "0.13.1", features = ["x509-parser"] }
base64 = "0.22.1"
sha1 = "0.10.6"
hex = "0.4.3"
time = "0.3.36"
urlencoding = "2.1.3"