[package]
name = "mx-policy"
description = "Core definition for policy data model"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/mattrax/Mattrax"
publish = false

[dependencies]
specta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.37", features = ["serde"] }
rust_decimal = "1.35.0"
