[package]
name = "mx-policy"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/mattrax/Mattrax"
publish = false

[dependencies]
mx-dmvalue = { path = "../dmvalue" }

serde = { version = "1.0.197", features = ["derive"] }
specta = { workspace = true, features = [
    "typescript",
    "chrono",
    "rust_decimal",
] }
chrono = { version = "0.4.37", features = ["serde"] }
rust_decimal = "1.35.0"
