[package]
name = "specta-jsonschema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
specta = { workspace = true, features = ["typescript"] }
thiserror = "1.0.58"
valico = "4.0.0"
