[package]
name = "configure"
version = "0.0.0"
description = "Cross platform MDM policy builder"
authors = ["Mattrax Inc."]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "dialog-open", "dialog-save", "fs-write-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persisted-scope = "0.1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
